# IRH_ROBOT_CONTROL_HMI

./: .gitignore  CMakeLists.txt  README.md
DATABASES/CARTESIAN_POINTS_DATABASE/: DemoRobot_PointPlaceToolOne.point
DATABASES/CARTESIAN_POINTS_DATABASE/Demo Robot/: PointApproachToPlaceToolOne.point
DATABASES/ROBOT_JOINTS_CONFIGURATIONS_DATABASE/: configuration_1.txt
DATABASES/ROBOT_JOINTS_CONFIGURATIONS_DATABASE/Demo Robot/: TrialConfiguration1.joints
DATABASES/ROBOT_OPERATION_SEQUENCE_DATABASE/: sample_operation.txt  sample_operation_demo_robot.txt
DATABASES/ROBOT_OPERATION_SEQUENCE_DATABASE/Demo Robot/: TestOperation.sequence
LOG_FOLDER/: [FriDec22022__15_55_01]_Log_File.txt  [FriNov252022__11_02_17]_Log_File.txt  [FriNov252022__11_11_02]_Log_File.txt  [MonDec122022__14_16_29]_Log_File.txt  [MonDec52022__09_35_31]_Log_File.txt  [MonDec52022__09_39_11]_Log_File.txt  [MonDec52022__09_40_13]_Log_File.txt  [MonDec52022__10_21_12]_Log_File.txt  [MonDec52022__10_23_38]_Log_File.txt  [MonDec52022__10_25_31]_Log_File.txt  [MonDec52022__10_29_50]_Log_File.txt  [MonDec52022__10_31_48]_Log_File.txt  [MonDec52022__10_32_31]_Log_File.txt  [MonDec52022__10_32_52]_Log_File.txt  [MonDec52022__10_38_32]_Log_File.txt  [MonDec52022__10_41_52]_Log_File.txt  [MonDec52022__11_05_28]_Log_File.txt  [MonDec52022__11_20_06]_Log_File.txt  [MonDec52022__11_21_06]_Log_File.txt  [MonDec52022__11_23_00]_Log_File.txt  [MonDec52022__11_29_32]_Log_File.txt  [MonDec52022__11_30_36]_Log_File.txt  [MonDec52022__11_31_39]_Log_File.txt  [MonDec52022__17_47_16]_Log_File.txt  [MonDec52022__17_48_04]_Log_File.txt  [MonDec52022__17_48_34]_Log_File.txt  [MonDec52022__17_49_44]_Log_File.txt  [MonNov282022__09_12_15]_Log_File.txt  [MonNov282022__09_23_55]_Log_File.txt  [MonNov282022__10_09_38]_Log_File.txt  [MonNov282022__10_13_49]_Log_File.txt  [MonNov282022__10_19_02]_Log_File.txt  [MonNov282022__10_44_39]_Log_File.txt  [MonNov282022__10_48_48]_Log_File.txt  [MonNov282022__10_53_09]_Log_File.txt  [MonNov282022__10_59_04]_Log_File.txt  [MonNov282022__11_01_43]_Log_File.txt  [MonNov282022__11_06_38]_Log_File.txt  [ThuDec12022__09_21_18]_Log_File.txt  [ThuDec12022__09_25_30]_Log_File.txt  (+112 more)
MainHMI/: CMakeLists.txt
MainHMI/include/: ITER_RH_Robot_Control_HMI_v2.aps  ITER_RH_Robot_Control_HMI_v2.rc  jointcontrolbox.h  mainhmi.h  qtHeaders.h  qtHeaders.hpp  resource.h
MainHMI/src/: connectionsHMI.cpp  connectionsJointWidget.cpp  hmiConnections.cpp  hmiDebug.cpp  hmiDemoRobot.cpp  hmiDeviceStates.cpp  hmiJointWidgets.cpp  hmiLED.cpp  hmiOperations.cpp  hmiStartupFunctions.cpp  hmiVirtualJoystick.cpp  hmiVirtualScara.cpp  jointcontrolbox.cpp  jointcontrolbox.ui  main.cpp  mainhmi.cpp  mainhmi.ui  startupUIFunctions.cpp
extras/: jointtargetbox.cpp  jointtargetbox.hpp  jointtargetbox.ui
libs/: CMakeLists.txt
libs/cpp/: CMakeLists.txt
libs/cpp/include/: cppHeaders.h  cppHeaders.hpp
libs/cpp/src/: cppHeaders.cpp
libs/flags/: CMakeLists.txt
libs/flags/include/: flags.h  flags.hpp
libs/flags/src/: flags.cpp
libs/getRobotData/: CMakeLists.txt
libs/getRobotData/include/: GetRobotData.h  GetRobotData.hpp
libs/getRobotData/src/: GetRobotData.cpp
libs/librapi/: CMakeLists.txt
libs/librapi/include/: rapi.h  rapi_char.h  rapi_client.h  rapi_command.h  rapi_connection.h  rapi_error.h  rapi_list.h  rapi_nil.h  rapi_single_value.h  rapi_stream.h  rapi_string.h  rapi_table.h  rapi_type.h  rapi_unique_id.h  rapi_utility.h  rapi_value.h
libs/librapi/src/: char.cpp  client.cpp  connection.cpp  error.cpp  list.cpp  nil.cpp  rapi_utility.cpp  stream.cpp  string.cpp  table.cpp  unique_id.cpp  value.cpp
libs/logger/: CMakeLists.txt
libs/logger/include/: logger.h  logger.hpp
libs/logger/src/: logger.cpp
libs/mymath/: CMakeLists.txt
libs/mymath/include/: mymath.h  mymath.hpp
libs/mymath/src/: mymath.cpp
libs/rhsl_cpp/: CMakeLists.txt
libs/rhsl_cpp/include/: ClassAnimationFile.hpp  ClassJointConfigFile.hpp  ClassOperationFile.hpp  ClassPointFile.hpp  rhsl.h  rhsl.hpp
libs/rhsl_cpp/src/: ClassAnimationFile.cpp  ClassPointFile.cpp
libs/robot/: CMakeLists.txt
libs/robot/include/: ClassDemoRobot.h  ClassDemoRobot.hpp  ClassJoint.h  ClassJoint.hpp  ClassRobot.h  ClassRobot.hpp  ClassVirtualSCARA.h  ClassVirtualSCARA.hpp  GetRobotData.h
libs/robot/src/: ClassDemoRobot.cpp  ClassJoint.cpp  ClassRobot.cpp  ClassVirtualSCARA.cpp
libs/trajectoryGeneration/: CMakeLists.txt
libs/trajectoryGeneration/include/: ClassPoint.h  ClassPoint.hpp
libs/trajectoryGeneration/src/: ClassPoint.cpp
