cmake_minimum_required (VERSION 3.19)

add_subdirectory(librapi)
message("Successfully added librapi")

add_subdirectory(cpp)
message("Successfully added cpp")

add_subdirectory(logger)
message("Successfully added logger")

add_subdirectory(mymath)
message("Successfully added mymath")

add_subdirectory(trajectoryGeneration)
message("Successfully added trajectoryGeneration")

add_subdirectory(robot)
message("Successfully added robot")













